// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`STEM tool render goldens (default state) > renders + pins a digest for aquacultureLab 1`] = `
{
  "buttons": 140,
  "inputs": 0,
  "lengthBucket": 266,
  "sha": "fbf55e8d416d13cc",
  "svgs": 0,
}
`;

exports[`STEM tool render goldens (default state) > renders + pins a digest for aquarium 1`] = `
{
  "buttons": 20,
  "inputs": 0,
  "lengthBucket": 50,
  "sha": "7c8dfa7b675f261d",
  "svgs": 0,
}
`;

exports[`STEM tool render goldens (default state) > renders + pins a digest for behaviorLab 1`] = `
{
  "buttons": 24,
  "inputs": 4,
  "lengthBucket": 53,
  "sha": "c060a5d21069fbe2",
  "svgs": 0,
}
`;

exports[`STEM tool render goldens (default state) > renders + pins a digest for cellularLab 1`] = `
{
  "buttons": 18,
  "inputs": 1,
  "lengthBucket": 43,
  "sha": "592091d05fa606fa",
  "svgs": 1,
}
`;

exports[`STEM tool render goldens (default state) > renders + pins a digest for climateExplorer 1`] = `
{
  "buttons": 36,
  "inputs": 0,
  "lengthBucket": 146,
  "sha": "8cc68bf952256157",
  "svgs": 0,
}
`;

exports[`STEM tool render goldens (default state) > renders + pins a digest for ecosystem 1`] = `
{
  "buttons": 29,
  "inputs": 8,
  "lengthBucket": 98,
  "sha": "e902be6bd35e81cd",
  "svgs": 0,
}
`;

exports[`STEM tool render goldens (default state) > renders + pins a digest for evoLab 1`] = `
{
  "buttons": 20,
  "inputs": 0,
  "lengthBucket": 130,
  "sha": "c7b633c76f3a91e0",
  "svgs": 0,
}
`;

exports[`STEM tool render goldens (default state) > renders + pins a digest for geologyExplorer 1`] = `
{
  "buttons": 23,
  "inputs": 1,
  "lengthBucket": 59,
  "sha": "5884a8064ab944cf",
  "svgs": 1,
}
`;

exports[`STEM tool render goldens (default state) > renders + pins a digest for geometryWorld 1`] = `
{
  "buttons": 0,
  "inputs": 0,
  "lengthBucket": 7,
  "sha": "01bdff13551f4ed3",
  "svgs": 0,
}
`;

exports[`STEM tool render goldens (default state) > renders + pins a digest for musicSynth 1`] = `
{
  "buttons": 114,
  "inputs": 14,
  "lengthBucket": 220,
  "sha": "1cbd7c6504afab77",
  "svgs": 1,
}
`;

exports[`STEM tool render goldens (default state) > renders + pins a digest for opticsLab 1`] = `
{
  "buttons": 41,
  "inputs": 0,
  "lengthBucket": 110,
  "sha": "5e9bd05cc466d8e3",
  "svgs": 0,
}
`;

exports[`STEM tool render goldens (default state) > renders + pins a digest for spaceColony 1`] = `
{
  "buttons": 13,
  "inputs": 6,
  "lengthBucket": 57,
  "sha": "1bc33c7498693443",
  "svgs": 1,
}
`;

exports[`STEM tool render goldens (default state) > renders + pins a digest for worldBuilder 1`] = `
{
  "buttons": 15,
  "inputs": 7,
  "lengthBucket": 62,
  "sha": "785f99df9fff6bdd",
  "svgs": 1,
}
`;
